# mermaid2gif

./: .dockerignore  .env.example  .gitignore  Dockerfile  Drawio-Embed-Appraches.md  Drawio-Embed-CLI-Appraches.md  Mermaid2GIF-Deep-Dive.md  README.md  REQUIREMENTS.md  debug_drawio.py  debug_state_diagram.py  pyproject.toml  sample.mmd  test_all_urls.py  test_configure_load.py  test_drawio_direct.py  test_dynamic_cleanup.py  test_explore_apis.py  test_import_api.py  test_mermaid_pipeline.py  test_minimal_drawio.py  test_react_approach.py  test_smart_viewport.py  test_working_url.py  test_xml_render.py
config/: animation_presets.json  llm_config.yaml
sample-mermaid-files/: OpenClaw-Architecture.mmd  README.md  er_template.mmd  flowchart-lr.mmd  flowchart-td.mmd  sample.mmd  sequence.mmd  test-class-simple.mmd
sample-mermaid-files/ThisProject/: Capture-Controller-Seq.mmd  Full-orchestration-graph-TD.mmd  GraphState-Class.mmd  High-Quality-FFmpeg-Pipeline-LR.mmd  Highlevel-TD.mmd  Lifecycle-Diagram-Generation-States.mmd
src/: __init__.py  main.py
src/agents/: __init__.py  fixer.py  intent.py
src/core/: __init__.py  config.py  exceptions.py  graph.py  state.py
src/engine/: __init__.py  animation_applicator.py  capture_controller.py  drawio_driver.py  drawio_utils.py  ffmpeg_processor.py  mermaid_renderer.html  mermaid_renderer.py  mermaid_validator.py
src/utils/: __init__.py  logger.py
test-py-files/: test_complete_pipeline.py  test_er_debug.py  test_gif_quality.py  test_seamless_loop.py
tests/: __init__.py  test_smoke.py
